<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/img_logo"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:text="@string/str_create_new_account"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_username"
        android:textColor="@color/font_light"
        android:textAlignment="center"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_account"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/font_light"
        android:hint="@string/str_username"
        android:padding="@dimen/_12sdp"
        android:inputType="text"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

    <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_email_address"
            android:textColor="@color/font_light"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name"/>
        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_light"
            android:hint="@string/str_email_address"
            android:padding="@dimen/_12sdp"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"/>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_password"
            android:textColor="@color/font_light"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_mail"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_light"
            android:hint="@string/str_password"
            android:padding="@dimen/_12sdp"
            android:inputType="textPassword"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_signup"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_12sdp"
            app:cornerRadius="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textAllCaps="false"
            android:backgroundTint="@color/app_color"
            app:layout_constraintTop_toBottomOf="@+id/et_password"/>
        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/str_already_have_an_account"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/tv_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/str_log_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_no_account"
            app:layout_constraintStart_toEndOf="@+id/tv_no_account"
            app:layout_constraintTop_toTopOf="@id/tv_no_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

